; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_gap.c_btm_ble_process_adv_pkt.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble_gap.c_btm_ble_process_adv_pkt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@btm_cb = common dso_local global %struct.TYPE_9__ zeroinitializer, align 4
@BD_ADDR_LEN = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@btm_ble_resolve_random_addr_on_adv = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_ble_process_adv_pkt(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64* %0, i64** %2, align 8
  store i64 0, i64* %4, align 8
  %9 = load i64*, i64** %2, align 8
  store i64* %9, i64** %5, align 8
  store i64 0, i64* %6, align 8
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @btm_cb, i32 0, i32 0, i32 0), align 4
  %11 = call i32 @BTM_BLE_IS_SCAN_ACTIVE(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  br label %44

14:                                               ; preds = %1
  %15 = load i64, i64* %7, align 8
  %16 = load i64*, i64** %5, align 8
  %17 = call i32 @STREAM_TO_UINT8(i64 %15, i64* %16)
  br label %18

18:                                               ; preds = %22, %14
  %19 = load i64, i64* %7, align 8
  %20 = add nsw i64 %19, -1
  store i64 %20, i64* %7, align 8
  %21 = icmp ne i64 %19, 0
  br i1 %21, label %22, label %44

22:                                               ; preds = %18
  %23 = load i64, i64* %4, align 8
  %24 = load i64*, i64** %5, align 8
  %25 = call i32 @STREAM_TO_UINT8(i64 %23, i64* %24)
  %26 = load i64, i64* %6, align 8
  %27 = load i64*, i64** %5, align 8
  %28 = call i32 @STREAM_TO_UINT8(i64 %26, i64* %27)
  %29 = load i32, i32* %3, align 4
  %30 = load i64*, i64** %5, align 8
  %31 = call i32 @STREAM_TO_BDADDR(i32 %29, i64* %30)
  %32 = load i32, i32* %3, align 4
  %33 = load i64, i64* %6, align 8
  %34 = load i64, i64* %4, align 8
  %35 = load i64*, i64** %5, align 8
  %36 = call i32 @btm_ble_process_adv_pkt_cont(i32 %32, i64 %33, i64 %34, i64* %35)
  %37 = load i64, i64* %8, align 8
  %38 = load i64*, i64** %5, align 8
  %39 = call i32 @STREAM_TO_UINT8(i64 %37, i64* %38)
  %40 = load i64, i64* %8, align 8
  %41 = add nsw i64 %40, 1
  %42 = load i64*, i64** %5, align 8
  %43 = getelementptr inbounds i64, i64* %42, i64 %41
  store i64* %43, i64** %5, align 8
  br label %18

44:                                               ; preds = %13, %18
  ret void
}

declare dso_local i32 @BTM_BLE_IS_SCAN_ACTIVE(i32) #1

declare dso_local i32 @STREAM_TO_UINT8(i64, i64*) #1

declare dso_local i32 @STREAM_TO_BDADDR(i32, i64*) #1

declare dso_local i32 @btm_ble_process_adv_pkt_cont(i32, i64, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
